--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,4 @@
-appnope==0.1.2
-async-generator==1.10
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.10.0
-biopython==1.79
-boto==2.49.0
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.12
-click==8.0.3
-colorama==0.4.4
-commonmark==0.9.1
-cryptography==36.0.1
-cssselect==1.1.0
-cycler==0.11.0
-decorator==5.1.1
-distlib==0.3.4
-execnet==1.9.0
-fasteners==0.17.3
-filelock==3.6.0
-fonttools==4.30.0
-h11==0.13.0
-idna==3.3
-iniconfig==1.1.1
-ipdb==0.13.9
-ipython==7.32.0
-jedi==0.18.1
-joblib==1.1.0
-kiwisolver==1.3.2
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mock==1.0.1
-more-itertools==8.12.0
-nltk==3.6.7
-nose==1.3.7
-numpy==1.22.3
-outcome==1.1.0
-packaging==21.3
-parameterized==0.8.1
-parso==0.8.3
-pdfminer.six==20211012
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==2.5.1
-pluggy==1.0.0
-prompt-toolkit==3.0.28
-ptyprocess==0.7.0
-py==1.11.0
-pycparser==2.21
-Pygments==2.11.2
-PyMySQL==1.0.2
-pyOpenSSL==22.0.0
-pyotp==2.6.0
-pyparsing==3.0.6
-pysam==0.18.0
-PySocks==1.7.1
-pytest==7.0.1
-pytest-forked==1.4.0
-pytest-html==2.0.1
-pytest-metadata==1.11.0
-pytest-ordering==0.6
-pytest-rerunfailures==10.2
-pytest-xdist==2.5.0
-python-dateutil==2.8.2
-PyYAML==6.0
-regex==2021.11.10
-requests==2.27.1
-rich==11.2.0
-RUST==0.1.1
-sbase==2.4.15
-sbvirtualdisplay==1.0.0
-selenium==4.1.2
-seleniumbase==2.4.15
-setuptools-scm==6.4.2
-six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-toml==0.10.2
-tomli==2.0.1
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-trio==0.20.0
-trio-websocket==0.9.2
-urllib3==1.26.8
-virtualenv==20.13.2
-wcwidth==0.2.5
+pytest
+selenium
+virtualenv
 webdriver_manager
-wsproto==1.0.0
